# Resume-Analyzer-Chatbot

./: README.md
Resume Analyzer Chatbot/: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
